[package]
name = "usr-canet-gvret"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["cargo", "derive"] }
futures = "0.3"
bytes = "1.5"
async-trait = "0.1.88"
byteorder = "1.5.0"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1.46.1", features = ["full"] }
anyhow = "1.0.98"
